[package]
name = "coincli"
version = "0.1.0"
edition = "2024"

[dependencies]
num-format = "0.4.4"
reqwest = { 
  version = "0.13.3",
  default-features = false,
  features = [
  "blocking",
  "json",
  "rustls-no-provider",
  ]
}
rustls = { version = "0.23.39", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
